Todo List на Json сервере с сортировкой и поиском

--- a/src/components/buttons/button.module.css
+++ b/src/components/buttons/button.module.css
@@ -1,8 +1,10 @@
 .button {
-	width: 25px;
+	position: relative;
+	width: 27px;
 	height: 25px;
 	text-align: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin-left: 5px;
 }
